# sdet-c19-test

./: README.md  app.py  data.json  dataset.py  model.py  pyproject.toml  requirements.in  requirements.txt
covid_app/: dataset.py  model.py  validation.py
tests/e2e/: test_list_areas.py
tests/integration/: test_compute.py
tests/unit/: test_validation.py
