[tool.poetry]
name = "sdet-c19-test"
version = "0.1.0"
description = "Coding test for SDET candidates"
authors = ["Rupert Bedford <rupert.bedford@babylonhealth.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cattrs = "^1.3.0"
attrs = "^20.3.0"
flask = "^1.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
